k3s/ollama/istio_ollama.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ollama-gateway
  namespace: open-webui
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "ollama.homeserver.local"
    port:
      number: 80
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ollama-virtualservice
  namespace: open-webui
spec:
  hosts:
    - "ollama.homeserver.local"
  gateways:
    - ollama-gateway
  http:
    - route:
      - destination:
          host: open-webui-service
          port:
            number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ollama-server
  namespace: open-webui
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "ollama-server.homeserver.local"
    port:
      number: 11434
      name: http
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ollama-server-virtualservice
  namespace: open-webui
spec:
  hosts:
    - "ollama-server.homeserver.local"
  gateways:
    - ollama-server
  http:
    - route:
      - destination:
          host: ollama-service
          port:
            number: 11434
